Fix HTML comments and structure in index.html

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
          Mentors Section - Trading education resources
          ================================================================== -->
     <section class="trades-section">
+    <div align="center">
       <div class="trades-grid">
         <!-- Timothy Sykes Mentor Card -->
         <div class="trade-card">
@@ -192,9 +193,11 @@
               <a href="https://www.timothysykes.com/" target="_blank" rel="noopener noreferrer" class="btn btn-secondary">Visit Website</a>
             </div>
           </div>
-        </div>     
+        </div>
+      </div>
   
-        <!-- Tim Bohen Mentor Card -->
+      <!-- Tim Bohen Mentor Card -->
+      <div align="center">
         <div class="trade-card">
           <div class="quick-links-card">
             <div class="quick-links-icon icon-amber">
@@ -208,6 +211,7 @@
           </div>
         </div>
       </div>
+    </div>
     </section>
   </main>
   
