--- a/index.directory/analytics.html
+++ b/index.directory/analytics.html
@@ -104,7 +104,7 @@
       
       <!-- Advanced Analytics Section -->
       <div class="glass-stat" style="padding: 1.5rem; margin-bottom: 1.5rem;">
-        <h3 style="margin-bottom: 1rem;"Advanced Risk Metrics</h3>
+        <h3 style="margin-bottom: 1rem;">Advanced Risk Metrics</h3>
         
         <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem;">
           <div>
